2003-01-21  Jochen Wiedmann <joe@ispsoft.de> (2.1025)

        * lib/DBD/mysql.pm: added support for optional
          DBI->data_sources() \%attributes parameter.
          Georg Rehfeld, <georg.rehfeld@gmx.de>
        * lib/DBD/mysql.pod: documented optional
          DBI->data_sources() \%attributes parameter.
          Georg Rehfeld, <georg.rehfeld@gmx.de>
        * t/dbdadmin.t: changed to use optional
          DBI->data_sources() \%attributes parameter.
          Georg Rehfeld, <georg.rehfeld@gmx.de>

2003-01-20  Jochen Wiedmann <joe@ispsoft.de> (2.1024)

	* dbdimp.c: Fixed missing support for double quotes
	  in ParseParam. JUERD@cpan.org
	* Test suite: Multiple patches for Windows/CygWin (case
	  insensitive file names and the like). Georg Rehfeld,
	  <georg.rehfeld@gmx.de>
	* lib/DBD/mysql/INSTALL.pod: Added description on how
	  to install with Windows/CygWin. Georg Rehfeld,
	  <georg.rehfeld@gmx.de>

2003-01-18  Jochen Wiedmann  <joe@ispsoft.de> (2.1023)

	* Remove compiler warnings
	  Fix some small issues to get it to work with MySQL 4.1
	  (Mostly checking return values from MySQL API functions)
	  Michael Widenius  <monty@mysql.com> (2.1022a)


2003-01-03  Jochen Wiedmann  <joe@ispsoft.de> (2.1022)

	* Added hints to Randy Kobes PPM repository, because
	  DBD::mysql is currently missing in ActiveState's
	  repository.

2002-11-18  Jochen Wiedmann  <joe@ispsoft.de> (2.1021)

	* lib/Mysql.pm (errno): Added handling for non-ref
	  arguments. Raphael Hertzog <rhertzog@hrnet.fr>

2002-09-23  Jochen Wiedmann  <joe@ispsoft.de> (2.1020)

	* Added mysql_local_infile option. (Paul DuBois,
	  paul@snake.net)

2002-09-16  Jochen Wiedmann  <joe@ispsoft.de> (2.1019)

	* Added hints to installing DBD::mysql with PPM 3.
	  (Stefan Prehn, stefanprehngmx.de)
	* Added $DBD::mysql::CLONE

2002-08-12  Jochen Wiedmann  <joe@ispsoft.de> (0.2018)

	* t/dbdadmin.t: The call to func('createdb') was
	  missing user name and password. Wolfgang Friebel
	  <friebel@ifh.de>